--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="apple-touch-icon" href="icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="熱量記錄器">    
+    <meta name="apple-mobile-web-app-title" content="CALORIES">    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health App - 活力管理</title>
@@ -207,3 +207,4 @@
 </script>
 </body>
 </html>
+
